# argon2

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
arch/x86_64/lib/: argon2-template-128.h
cmake/: OptimizeForArchitecture.cmake
include/: argon2.h
lib/: argon2.c  core.c  core.h  genkat.c  genkat.h
src/: bench2.c  genkat.c  run.c  timing.h
